--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8200
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.flyway.enabled=false
+
+logging.level.com.mahesh=DEBUG
+
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
