--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
-logging:
-  level:
-    com.mahesh: DEBUG
-
-server:
-  port: 8200
-
-spring:
-  datasource:
-    url: jdbc:h2:mem:testdb
+#logging:
+#  level:
+#    com.mahesh: DEBUG
+#
+#server:
+#  port: 8200
+#
+#spring:
+#  datasource:
+#    url: jdbc:h2:mem:testdb
