Changes related to Spring Security Basic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8200
 
+# Just for demonstration purpose
+spring.security.user.name = mahesh
+spring.security.user.password = kumar
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.flyway.enabled=false
 
