--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.port=8200
 
-# Just for demonstration purpose
-spring.security.user.name = mahesh
-spring.security.user.password = kumar
+spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:9000
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.flyway.enabled=false
